default hostname to treasurebox

--- a/auto/config
+++ b/auto/config
@@ -2,7 +2,7 @@ lb config noauto \
     --apt-indices false \
     --apt-recommends false \
     --archive-areas main \
-    --bootappend-live "boot=live config" \
+    --bootappend-live "boot=live hostname=treasurebox config persistence" \
     --debootstrap-options "--variant=minbase" \
     --clean \
     --distribution wheezy \
