enable anonymous access via AFP, fixes #10

--- a/config/includes.chroot/etc/netatalk/afpd.conf
+++ b/config/includes.chroot/etc/netatalk/afpd.conf
@@ -1,1 +1,1 @@
-- -tcp -noddp -uamlist uams_dhx.so,uams_dhx2_passwd.so -nosavepassword
+- -tcp -noddp -uamlist uams_guest.so,uams_dhx.so,uams_dhx2_passwd.so -nosavepassword
