fixup transmission config so it works out of the box, fixes #4

--- a/config/includes.chroot/etc/transmission-daemon/settings.json
+++ b/config/includes.chroot/etc/transmission-daemon/settings.json
@@ -8,11 +8,11 @@
     "alt-speed-up": 50, 
     "bind-address-ipv4": "0.0.0.0", 
     "bind-address-ipv6": "::", 
-    "blocklist-enabled": false, 
-    "blocklist-url": "http://www.example.com/blocklist", 
+    "blocklist-enabled": true,
+    "blocklist-url": "http://list.iblocklist.com/?list=bt_level1&fileformat=p2p&archiveformat=gz",
     "cache-size-mb": 4, 
     "dht-enabled": true, 
-    "download-dir": "/var/lib/transmission-daemon/downloads", 
+    "download-dir": "/shares/Downloads",
     "download-limit": 100, 
     "download-limit-enabled": 0, 
     "download-queue-enabled": true, 
@@ -20,8 +20,8 @@
     "encryption": 1, 
     "idle-seeding-limit": 30, 
     "idle-seeding-limit-enabled": false, 
-    "incomplete-dir": "//Downloads", 
-    "incomplete-dir-enabled": false, 
+    "incomplete-dir": "/shares/Downloads/.transmission",
+    "incomplete-dir-enabled": true,
     "lpd-enabled": false, 
     "max-peers-global": 200, 
     "message-level": 2, 
@@ -34,7 +34,7 @@
     "peer-port-random-on-start": false, 
     "peer-socket-tos": "default", 
     "pex-enabled": true, 
-    "port-forwarding-enabled": false, 
+    "port-forwarding-enabled": true,
     "preallocation": 1, 
     "prefetch-enabled": 1, 
     "queue-stalled-enabled": true, 
