tweaks for pyLoad, refs #6

--- a/config/includes.chroot/etc/pyload/pyload.conf
+++ b/config/includes.chroot/etc/pyload/pyload.conf
@@ -27,7 +27,7 @@ general - "General":
 	en;de;fr;it;es;nl;sv;ru;pl;cs;sr;pt_BR language : "Language" = en
 	folder download_folder : "Download Folder" = /shares/Downloads
 	bool checksum : "Use Checksum" = False
-	bool folder_per_package : "Create folder for each package" = True
+	bool folder_per_package : "Create folder for each package" = False
 	bool debug_mode : "Debug Mode" = False
 	int min_free_space : "Min Free Space (MB)" = 200
 	int renice : "CPU Priority" = 0
@@ -42,7 +42,7 @@ webinterface - "Webinterface":
 	bool activated : "Activated" = True
 	str prefix : "Path Prefix" = 
 	builtin;threaded;fastcgi;lightweight server : "Server" = builtin
-	ip host : "IP" = 127.0.0.1
+	ip host : "IP" = 0.0.0.0
 	bool https : "Use HTTPS" = False
 	int port : "Port" = 9000
 
@@ -61,7 +61,7 @@ reconnect - "Reconnect":
 	time startTime : "Start" = 0:00
 
 download - "Download":
-	int max_downloads : "Max Parallel Downloads" = 3
+	int max_downloads : "Max Parallel Downloads" = 1
 	bool limit_speed : "Limit Download Speed" = False
 	str interface : "Download interface to bind (ip or Name)" = None
 	bool skip_existing : "Skip already existing files" = False
