--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,12 @@ language: c
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -y debootstrap syslinux
+  - make external
 
 install:
   - cd external/live-build && sudo make install
 
-script: make build
+script: make
 
 #deploy:
 #  edge: true
