--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,13 @@ language: c
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -y debootstrap syslinux
+  - sudo apt-get install -y debootstrap syslinux time
   - make external
 
 install:
   - sudo make -C external/live-build install
 
-script: 
-  - ls -R *
+script:
   - make
 
 #deploy:
