remove source for now, fixes travis builds

--- a/auto/config
+++ b/auto/config
@@ -9,4 +9,5 @@ lb config noauto \
     --iso-application "Treasure Box" \
     --iso-publisher "Marc Sibson" \
     --mode debian \
+    --source false \
     "$@"
