--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ before_install:
 
 install:
   - sudo make -C live-build install
+  - which lb
+  - lb --version
   - sudo apt-get install -y debootstrap syslinux time live-build
 
 script:
