--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ deploy:
   provider: releases
   api-key:
     - secure: "RDp9Y4gqzQ3sEfLFW7O5pWU3D0VQD70H7/YBKYWiCSoKd1HF6yoe9RKtEXCyruCW5zFCcsEuFIrV3QKtoV9jhFutAFFXOo4yzwChhRyLeV6CEbhTynw8IV436d3tWZFbIxAqa7yQmeGEVhaArsDByWsxypr5VwolvpIVSiUXPV8="
-  file: binary.hybrid.iso
+  file: treasurebox-*.iso
   on:
     tags: true
     all_branches: true
