remove toram, breaks full persistence script
 - tbox-init-full-persistence relies on /dev/sdUSB being mounted
 but toram results in /dev/shm being mounted at rootfs.

--- a/auto/config
+++ b/auto/config
@@ -3,7 +3,7 @@ lb config noauto \
     --apt-recommends true \
     --archives live.debian.net \
     --archive-areas main \
-    --bootappend-live "boot=live hostname=treasurebox live-config persistence noeject quickreboot toram" \
+    --bootappend-live "boot=live hostname=treasurebox live-config persistence noeject quickreboot" \
     --clean \
     --distribution wheezy \
     --iso-application "Treasure Box" \
